Fix overflow for animation on larger screens

--- a/src/containers/About/About.module.css
+++ b/src/containers/About/About.module.css
@@ -1,8 +1,11 @@
 .About {
+    overflow-x: hidden;
+}
+
+.Content {
     margin: 0 auto;
     padding: 50px 20px;
     max-width: 600px;
-    overflow-x: hidden;
 }
 
 .FloatingHeadshot {
